# submarine_multistream

./: .gitignore  CMakeLists.txt  CMakeLists_vision.txt  DEPLOYMENT.md  ML_SYSTEM_README.md  NETWORK_SETUP.md  README.md  README_VISION.md  SESSION_REFERENCE.md  SUBMARINE_SETUP.md  WEB_SETUP.md  auto_setup_pi5.sh  camera_receiver.cpp  camera_sender.cpp  color_receiver.cpp  color_sender.cpp  depth_3d_receiver.cpp  depth_3d_sender.cpp  depth_receiver.cpp  depth_sender.cpp  download_models.sh  install_on_submarine.sh  install_on_surface.sh  internet_color_sender.cpp  kill_all.sh  map_receiver.cpp  map_sender.cpp  ml_receiver.cpp  setup_pi.sh  submarine-vision-sender.service  submarine_3d_map.cpp  submarine_3d_receiver.py  submarine_3d_viz.cpp  submarine_launcher.cpp  submarine_launcher.service  submarine_launcher.sh  submarine_multistream.cpp  submarine_receiver.cpp  submarine_receiver_depth3d.cpp  submarine_receiver_raw.cpp  (+14 more)
gstreamer/: QUICKSTART.md  README.md  all_streams_sender.sh  color_receiver.sh  color_rtsp_server.sh  color_sender.sh  color_sender_tcp.sh  install.sh  submarine-gstreamer.service  test_stream.sh
gstreamer_orbbec/: gstreamer_sender.cpp
